--- a/vue/package.json
+++ b/vue/package.json
@@ -8,6 +8,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@headlessui/vue": "^1.6.2",
+    "@heroicons/vue": "^1.0.6",
+    "@tailwindcss/forms": "^0.5.2",
     "vue": "^3.2.25",
     "vue-router": "^4.0.15",
     "vuex": "^4.0.2"
